Fixes 3 different GUI panes